--- a/deployment/render.yaml
+++ b/deployment/render.yaml
@@ -15,7 +15,7 @@ services:
   - type: web
     name: abtest-frontend
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci --prefer-offline && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
