--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "framer-motion": "^12.6.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "^13.5.11",
+    "next": "^15.3.1",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.30",
+    "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
